--- a/src/smartcalk_QT/credit.ui
+++ b/src/smartcalk_QT/credit.ui
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="total_month">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>20</y>
+     <x>380</x>
+     <y>40</y>
      <width>161</width>
      <height>16</height>
     </rect>
@@ -26,11 +26,11 @@
     <string>Ежемесячный платеж</string>
    </property>
   </widget>
-  <widget class="QLabel" name="pereplata">
+  <widget class="QLabel" name="pereplatas">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>160</y>
+     <x>390</x>
+     <y>110</y>
      <width>151</width>
      <height>16</height>
     </rect>
@@ -42,8 +42,8 @@
   <widget class="QLabel" name="total">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>210</y>
+     <x>400</x>
+     <y>190</y>
      <width>131</width>
      <height>16</height>
     </rect>
@@ -94,8 +94,8 @@
   <widget class="QRadioButton" name="radioButton">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>210</y>
+     <x>50</x>
+     <y>180</y>
      <width>191</width>
      <height>22</height>
     </rect>
@@ -107,8 +107,8 @@
   <widget class="QRadioButton" name="ann">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>210</y>
+     <x>80</x>
+     <y>220</y>
      <width>106</width>
      <height>22</height>
     </rect>
@@ -150,10 +150,30 @@
   <widget class="QLineEdit" name="output">
    <property name="geometry">
     <rect>
-     <x>442</x>
-     <y>42</y>
-     <width>151</width>
-     <height>101</height>
+     <x>270</x>
+     <y>60</y>
+     <width>391</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="cr_pereplata">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>130</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="total_cr">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>210</y>
+     <width>201</width>
+     <height>31</height>
     </rect>
    </property>
   </widget>
