--- a/src/credit.ui
+++ b/src/credit.ui
@@ -156,6 +156,9 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="readOnly">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="QLineEdit" name="cr_pereplata">
    <property name="geometry">
@@ -166,6 +169,9 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="readOnly">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLineEdit" name="total_cr">
    <property name="geometry">
@@ -175,6 +181,9 @@
      <width>201</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
